--- a/Cart.html
+++ b/Cart.html
@@ -479,7 +479,7 @@
                 cartItem.innerHTML = `
                     <img src="${item.imageUrl}" alt="${item.name}">
                     <span>${item.name}</span>
-                    <span>₹${item.price}</span><br>
+                    <span>₹${item.price}</span>
                     <div class="quantity-controls">
                         <button onclick="decreaseQuantity('${item.name}')">-</button>
                         <span class="quantity">${item.quantity}</span>
