--- a/Cart.html
+++ b/Cart.html
@@ -36,6 +36,22 @@
             height: 50px;
             border-radius: 5px;
         }
+         .cart-item .quantity-controls {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+        }
+        .cart-item .quantity-controls button {
+            width: 30px;
+            height: 30px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            text-align: center;
+        }
         .cart-item .quantity {
             margin-left: 10px;
             font-weight: bold;
