--- a/Cart.html
+++ b/Cart.html
@@ -410,6 +410,22 @@
             border-radius: 5px;
             animation: blink 2s step-start infinite;
         }
+         .cart-item .quantity-controls {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+        }
+        .cart-item .quantity-controls button {
+            width: 30px;
+            height: 30px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            text-align: center;
+        }
         @keyframes blink {
             50% {
                 opacity: 0;
