--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                     <img src="thick-cold-coffee-url.jpg" width="100" height="100" alt="Thick Cold Coffee">
                     <h3>Thick Cold Coffee</h3>
                     <p>69</p>
-                    <div class="quantity-controls">
+                  <!--  <div class="quantity-controls">
                         <button onclick="updateQuantity('quantity-thick-cold-coffee', -1)">-</button>
                         <input type="number" id="quantity-thick-cold-coffee" class="quantity-input" value="1" min="1">
                         <button onclick="updateQuantity('quantity-thick-cold-coffee', 1)">+</button>
-                    </div>
+                    </div>-->
                     <button class="add-to-cart" onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69, 'quantity-thick-cold-coffee')">Add to Cart</button>
                 </div>
                 <div class="menu-item"> 
