--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                         <input type="number" id="quantity-thick-cold-coffee" class="quantity-input" value="1" min="1">
                         <button onclick="updateQuantity('quantity-thick-cold-coffee', 1)">+</button>
                     </div>-->
-                    <button class="add-to-cart" onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69, 'quantity-thick-cold-coffee')">Add to Cart</button>
+                    <!--<button class="add-to-cart" onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69, 'quantity-thick-cold-coffee')">Add to Cart</button>-->
+			<button onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69)">Add to Cart</button>
                 </div>
                 <div class="menu-item"> 
                     <img src="hot-chocolate-url.jpg" alt="Hot Chocolate">
