--- a/index.html
+++ b/index.html
@@ -786,10 +786,10 @@ s0.parentNode.insertBefore(s1,s0);
 
     function addToCart(imageUrl, itemName, itemPrice, quantityInputId) {
         const quantity = parseInt(document.getElementById(quantityInputId).value);
-        if (isNaN(quantity) || quantity < 1) {
+        /*if (isNaN(quantity) || quantity < 1) {
             alert('Please enter a valid quantity.');
             return;
-        }
+        }*/
 
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
