--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ s0.parentNode.insertBefore(s1,s0);
         input.value = quantity;
     }
 
-    function addToCart(imageUrl, itemName, itemPrice, quantityInputId) {
+    function addToCart(imageUrl, itemName, itemPrice) {
        /* const quantity = parseInt(document.getElementById(quantityInputId).value);
         /*if (isNaN(quantity) || quantity < 1) {
             alert('Please enter a valid quantity.');
