--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                     <!--<button class="add-to-cart" onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69, 'quantity-thick-cold-coffee')">Add to Cart</button>-->
 			<button onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69)">Add to Cart</button>
                 </div>
+		    </div>
                 <div class="menu-item"> 
                     <img src="hot-chocolate-url.jpg" alt="Hot Chocolate">
     <h3>Hot Chocolate</h3>
