--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 	
 
-
+<style>
 
 </head>
 <body>
@@ -641,331 +641,7 @@
 
 
 
-	    <div class="section-title">Pizzas</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Cheese Margherita Pizza">
-                    <h3>Cheese Margherita Pizza</h3>
-                    <p class="price">₹149 (Single Cheese), ₹199 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Cheese and Corn Pizza">
-                    <h3>Cheese and Corn Pizza</h3>
-                    <p class="price">₹179 (Single Cheese), ₹229 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Delight Pizza">
-                    <h3>Veg Delight Pizza</h3>
-                    <p class="price">₹189 (Single Cheese), ₹239 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Paneer Makhani Pizza">
-                    <h3>Paneer Makhani Pizza</h3>
-                    <p class="price">₹239 (Single Cheese), ₹289 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Tandoori Paneer Pizza">
-                    <h3>Tandoori Paneer Pizza</h3>
-                    <p class="price">₹249 (Single Cheese), ₹299 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Classic Pizza">
-                    <h3>Chicken Classic Pizza</h3>
-                    <p class="price">₹199 (Single Cheese), ₹249 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Delight Pizza">
-                    <h3>Chicken Delight Pizza</h3>
-                    <p class="price">₹229 (Single Cheese), ₹279 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Makhani Pizza">
-                    <h3>Chicken Makhani Pizza</h3>
-                    <p class="price">₹249 (Single Cheese), ₹299 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Sandwiches</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chilli Garlic Toast">
-                    <h3>Chilli Garlic Toast</h3>
-                    <p class="price">₹49</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Grilled Sandwich">
-                    <h3>Veg Grilled Sandwich</h3>
-                    <p class="price">₹79</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Tandoori Paneer Sandwich">
-                    <h3>Tandoori Paneer Sandwich</h3>
-                    <p class="price">₹129</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Cheese Grilled Sandwich">
-                    <h3>Veg Cheese Grilled Sandwich</h3>
-                    <p class="price">₹139</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Club Sandwich">
-                    <h3>Veg Club Sandwich</h3>
-                    <p class="price">₹179</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Omelette Sandwich">
-                    <h3>Omelette Sandwich</h3>
-                    <p class="price">₹79</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Grilled Sandwich">
-                    <h3>Chicken Grilled Sandwich</h3>
-                    <p class="price">₹129</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Makhani Sandwich">
-                    <h3>Chicken Makhani Sandwich</h3>
-                    <p class="price">₹149</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Club Sandwich">
-                    <h3>Chicken Club Sandwich</h3>
-                    <p class="price">₹239</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Tasty Bites</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Potato Cheese Shots">
-                    <h3>Potato Cheese Shots (8 pcs)</h3>
-                    <p class="price">₹109</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Cheese Corn Balls">
-                    <h3>Cheese Corn Balls (6 pcs)</h3>
-                    <p class="price">₹119</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Nuggets">
-                    <h3>Chicken Nuggets (6 pcs)</h3>
-                    <p class="price">₹139</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Cheese Balls">
-                    <h3>Chicken Cheese Balls (6 pcs)</h3>
-                    <p class="price">₹149</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Fries</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="French Fries Plain">
-                    <h3>French Fries Plain</h3>
-                    <p class="price">₹99</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Masala Fries">
-                    <h3>Masala Fries</h3>
-                    <p class="price">₹119</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chilli Garlic Fries">
-                    <h3>Chilli Garlic Fries</h3>
-                    <p class="price">₹139</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Peri Peri Fries">
-                    <h3>Peri Peri Fries</h3>
-                    <p class="price">₹139</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Cheesy Fries">
-                    <h3>Cheesy Fries</h3>
-                    <p class="price">₹139</p>
-                    <button class="add-to-cart-button1">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Banjos</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Garden Green Banjo">
-                    <h3>Garden Green Banjo</h3>
-                    <p class="price">₹109 (Single Cheese), ₹129 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Spinach Corn Banjo">
-                    <h3>Spinach Corn Banjo</h3>
-                    <p class="price">₹119 (Single Cheese), ₹139 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Tandoori Paneer Banjo">
-                    <h3>Tandoori Paneer Banjo</h3>
-                    <p class="price">₹149 (Single Cheese), ₹169 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Omelette Banjo">
-                    <h3>Omelette Banjo</h3>
-                    <p class="price">₹79 (Single Cheese), ₹99 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Banjo">
-                    <h3>Chicken Banjo</h3>
-                    <p class="price">₹149 (Single Cheese), ₹169 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Makhani Banjo">
-                    <h3>Chicken Makhani Banjo</h3>
-                    <p class="price">₹169 (Single Cheese), ₹189 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Momos</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Momo">
-                    <h3>Veg Momo</h3>
-                    <p class="price">₹99 (Single Cheese), ₹119 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Paneer Momo">
-                    <h3>Paneer Momo</h3>
-                    <p class="price">₹119 (Single Cheese), ₹139 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Momo">
-                    <h3>Chicken Momo</h3>
-                    <p class="price">₹119 (Single Cheese), ₹139 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-    <div class="section-title">Rolls</div>
-    <div class="menu-container">
-        <button class="prev">&#10094;</button>
-        <div class="menu-wrapper">
-            <div class="menu" data-index="0">
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Veg Roll">
-                    <h3>Veg Roll</h3>
-                    <p class="price">₹79 (Single Cheese), ₹99 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Spinach Corn Roll">
-                    <h3>Spinach Corn Roll</h3>
-                    <p class="price">₹89 (Single Cheese), ₹109 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Tandoori Paneer Roll">
-                    <h3>Tandoori Paneer Roll</h3>
-                    <p class="price">₹129 (Single Cheese), ₹149 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Paneer Makhani Roll">
-                    <h3>Paneer Makhani Roll</h3>
-                    <p class="price">₹139 (Single Cheese), ₹159 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Egg Roll">
-                    <h3>Egg Roll</h3>
-                    <p class="price">₹69 (Single Cheese), ₹89 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Roll">
-                    <h3>Chicken Roll</h3>
-                    <p class="price">₹119 (Single Cheese), ₹139 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-                <div class="menu-item">
-                    <img src="https://via.placeholder.com/300x200" alt="Chicken Makhani Roll">
-                    <h3>Chicken Makhani Roll</h3>
-                    <p class="price">₹159 (Single Cheese), ₹179 (Double Cheese)</p>
-                    <button class="add-to-cart-button">Add to Cart</button>
-                </div>
-            </div>
-        </div>
-        <button class="next">&#10095;</button>
-    </div>
-
-
-	    
-
+	   
 
 
 <div id="notificationModal" class="modal">
