--- a/about.html
+++ b/about.html
@@ -281,7 +281,19 @@
         }
     </script>
     <footer>
-        Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a>
-    </footer>
+    
+    <div class="footer-section">
+        <ul>
+            <li><a href="shipping-policy.html">Shipping Policy</a></li>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+            <li><a href="refunds.html">Refunds</a></li>
+            <li><a href="return-exchange.html">Return & Exchange Policy</a></li>
+        </ul>
+    </div>
+    <div class="footer-section">
+        <p>Designed and Animated by <a href="https://www.skyoudtechnologies.com">Skyoud Technologies</a></p>
+    </div>
+</footer>
 </body>
 </html>
