--- a/about.html
+++ b/about.html
@@ -93,6 +93,39 @@
         footer a:hover {
             text-decoration: underline;
         }
+        footer {
+    background-color: #000000; /* Black background */
+    color: #f0f0f0; /* Dark white text color */
+    padding: 20px;
+    text-align: center;
+}
+
+.footer-section {
+    margin-bottom: 10px;
+}
+
+.footer-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    display: inline;
+    
+    margin-right: 15px;
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: #f0f0f0;
+	
+}
+
+.footer-section ul li a:hover {
+    text-decoration: underline;
+	
+}
+
 
         @media (max-width: 768px) {
             .container {
