--- a/index.html
+++ b/index.html
@@ -152,6 +152,107 @@
 
 </style>
 
+
+
+	<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .menu-section {
+            margin: 20px;
+            position: relative;
+        }
+        .menu-section h2  {
+            margin: 10px 0;
+            text-align: center;
+        }
+        .menu-item h3 {
+    margin: 0;
+    font-size: 1em;
+    white-space: normal; /* Allows text to wrap */
+    word-wrap: break-word; /* Breaks long words */
+    overflow: hidden; /* Ensures text does not overflow */
+    text-overflow: ellipsis; /* Adds ellipsis for overflowed text */
+}
+        .menu-container {
+            display: flex;
+            overflow-x: auto;
+            scroll-behavior: smooth; /* Smooth scrolling */
+            padding: 10px;
+            white-space: nowrap;
+            position: relative;
+            gap: 10px; /* Space between items */
+        }
+        .menu-item, .menu-item1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            background-color: #f2f2f2;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            text-align: center;
+            box-sizing: border-box;
+            flex: 0 0 auto; /* Prevent shrinking and growing */
+        }
+        .menu-item {
+            width: 200px;
+            height: 120px;
+        }
+        .menu-item1 {
+            width: 200px;
+            height: 180px;
+        }
+        .menu-item h3, .menu-item1 h3 {
+            margin: 0;
+            font-size: 1em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .menu-item p, .menu-item1 p {
+            margin: 5px 0;
+            font-size: 0.9em;
+            color: #888;
+        }
+        .menu-item button, .menu-item1 button {
+            padding: 5px 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            width: 100%;
+            font-size: 0.9em;
+            box-sizing: border-box;
+        }
+        .menu-item button:hover, .menu-item1 button:hover {
+            background-color: #45a049;
+        }
+        .slide-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #ddd;
+            border: none;
+            border-radius: 50%;
+            padding: 10px;
+            cursor: pointer;
+            z-index: 10;
+        }
+        .slide-button:hover {
+            background-color: #ccc;
+        }
+        .slide-left {
+            left: 0;
+        }
+        .slide-right {
+            right: 0;
+        }
+    </style>
+
 </head>
 <body>
     <header>
