--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@ s0.parentNode.insertBefore(s1,s0);
         }
 
         localStorage.setItem('cart', JSON.stringify(cart));
-        showModal(itemName + ' has been added to your cart.');
+        showModal(itemPrice + ' has been added to your cart.');
     }
 
     function showModal(message) {
