--- a/index.html
+++ b/index.html
@@ -1212,6 +1212,11 @@ s0.parentNode.insertBefore(s1,s0);
         input.value = quantity;
     }
 
+	function slide(containerId, offset) {
+            const container = document.getElementById(containerId);
+            container.scrollLeft += offset;
+        }
+
     function addToCart(imageUrl, itemName, itemPrice) {
        /* const quantity = parseInt(document.getElementById(quantityInputId).value);
         /*if (isNaN(quantity) || quantity < 1) {
@@ -1228,6 +1233,8 @@ s0.parentNode.insertBefore(s1,s0);
                 found = true;
             }
         });*/
+
+	    
 
 	    let found = false;
             cart.forEach(item => {
