--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@ s0.parentNode.insertBefore(s1,s0);
             container.scrollLeft += offset;
         }
 
-    function addToCart(imageUrl, itemName, itemPrice) {
+    function addToCart(itemName, itemPrice) {
        /* const quantity = parseInt(document.getElementById(quantityInputId).value);
         /*if (isNaN(quantity) || quantity < 1) {
             alert('Please enter a valid quantity.');
