--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -74,27 +74,27 @@ a:hover {
         <h1>Shipping Policy</h1>
     </header>
     <main>
-        <section>
-            
-            <h2>SHIPPING FREE?</h2>
-            <p>Yes, shipping is FREE all over India.</p>
-        </section>
-        <section>
-            <h2>WHEN WILL I RECEIVE MY ORDER?</h2>
-            <p>Orders are shipped out directly from any of our warehouses, and they will do everything they can to get you your order as fast as they can! Due to the popularity of our offers, please allow an estimated 3–6 days for your order to arrive.</p>
-        </section>
-        <section>
-            <h2>CAN I TRACK MY ORDER?</h2>
-            <p>YES, you will receive an AWB number (within 1 - 2 days) once you place an order. You can track your order on our Tracking Page with the help of the AWB number. If you still face issues tracking your orders, feel free to call or WhatsApp us at [Your Contact Information].</p>
-        </section>
-        <section>
-            <h2>WHY IS MY ORDER BEING SHIPPED IN DIFFERENT PACKAGES?</h2>
-            <p>If you have a multi-item order, each item may be shipped from a different warehouse, depending on which one has them available the fastest. Alternatively, if an item is popular and on a bit of a back order, we might ship your items at different times, in different packages, to prevent holding up your order and to get it to you as fast as possible!</p>
-        </section>
-        <section>
-            <h2>WHAT HAPPENS IF MY ORDER GETS STUCK OR LOST IN THE MAIL?</h2>
-            <p>All of our orders are sent with insured shipping and handling. If an order gets stuck somewhere, sent back, or even lost during the delivery process, we apologize! The postal service is out of our control. However, in cases like this, because the packages are insured, we will send you a new package with quicker shipping and full tracking, if possible. Please see our refund and return policy for when these might be applicable to shipping situations.</p>
-        </section>
-    </main>
+    <section>
+        <h2>IS SHIPPING FREE?</h2>
+        <p>Absolutely! We offer FREE shipping across India, ensuring that you can enjoy our delicious offerings without any extra cost.</p>
+    </section>
+    <section>
+        <h2>WHEN WILL MY ORDER ARRIVE?</h2>
+        <p>Our orders are dispatched directly from our well-equipped warehouses. We aim to get your order to you as swiftly as possible. Given the popularity of our items, please allow an estimated 3–6 days for delivery.</p>
+    </section>
+    <section>
+        <h2>CAN I TRACK MY ORDER?</h2>
+        <p>Yes, you can! Once your order is placed, you will receive an AWB number within 1–2 days. Use this number to track your order on our Tracking Page. For any assistance, feel free to contact us via phone or WhatsApp at [Your Contact Information].</p>
+    </section>
+    <section>
+        <h2>WHY AM I RECEIVING MY ORDER IN SEPARATE PACKAGES?</h2>
+        <p>If your order contains multiple items, they may be shipped from different warehouses based on stock availability. Additionally, if some items are on back order, we may send them in separate packages to ensure you receive the available items as soon as possible.</p>
+    </section>
+    <section>
+        <h2>WHAT IF MY ORDER GETS STUCK OR LOST IN TRANSIT?</h2>
+        <p>We take every measure to ensure your order arrives safely. All packages are insured. If an order is delayed, returned, or lost, we will promptly send a replacement with expedited shipping and tracking. For more details, please review our refund and return policy.</p>
+    </section>
+</main>
+
 </body>
 </html>
