--- a/about.html
+++ b/about.html
@@ -321,7 +321,7 @@
             <li><a href="privacy-policy.html">Privacy Policy</a></li>
             <li><a href="terms-conditions.html">Terms & Conditions</a></li>
             <li><a href="refunds.html">Refunds</a></li>
-            <li><a href="return-exchange.html">Return & Exchange Policy</a></li>
+          <!--  <li><a href="return-exchange.html">Return & Exchange Policy</a></li> -->
         </ul>
     </div>
     <div class="footer-section">
