--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -76,20 +76,16 @@ a:hover {
     <main>
     <section>
         <h2>IS SHIPPING FREE?</h2>
-        <p>Absolutely! We offer FREE shipping across India, ensuring that you can enjoy our delicious offerings without any extra cost.</p>
+        <p>We offer FREE shipping within a 10 to 15 km radius of Banjo's Cafe, ensuring that you can enjoy our delicious offerings without any extra cost.</p>
     </section>
-    <section>
-        <h2>WHEN WILL MY ORDER ARRIVE?</h2>
-        <p>Our orders are dispatched directly from our well-equipped warehouses. We aim to get your order to you as swiftly as possible. Given the popularity of our items, please allow an estimated 3–6 days for delivery.</p>
-    </section>
+   <section>
+    <h2>WHEN WILL MY ORDER ARRIVE?</h2>
+    <p>Our orders are dispatched directly from our well-equipped warehouses. We aim to get your order to you as swiftly as possible. Given the popularity of our items, please allow an estimated delivery time of 30 minutes.</p>
+</section>
     
     <section>
-        <h2>WHY AM I RECEIVING MY ORDER IN SEPARATE PACKAGES?</h2>
-        <p>If your order contains multiple items, they may be shipped from different warehouses based on stock availability. Additionally, if some items are on back order, we may send them in separate packages to ensure you receive the available items as soon as possible.</p>
-    </section>
-    <section>
         <h2>WHAT IF MY ORDER GETS STUCK OR LOST IN TRANSIT?</h2>
-        <p>We take every measure to ensure your order arrives safely. All packages are insured. If an order is delayed, returned, or lost, we will promptly send a replacement with expedited shipping and tracking. For more details, please review our refund and return policy.</p>
+        <p>We take every measure to ensure your order arrives safely. All packages are insured.</p>
     </section>
 </main>
 
