--- a/refunds.html
+++ b/refunds.html
@@ -76,10 +76,11 @@ a:hover {
     </header>
     <main>
         <section>
-            <h2>Refund Process</h2>
-            <p>Once your return is received and inspected, we will send you an email to notify you that we have received your returned item. We will also notify you of the approval or rejection of your refund.</p>
-            <p>If you are approved, then your refund will be processed, and a credit will automatically be applied to your credit card or original method of payment, within a certain amount of days. Refund will be processed in 7 working days. Refund may take 1-2 days. The refund will be initiated by the original payment method.</p>
-        </section>
+    <h2>Refund Process</h2>
+    <p>Once your return is received and inspected, we will send you an email to notify you that we have received your returned item. We will also notify you of the approval or rejection of your refund.</p>
+    <p>If you are approved, then your refund will be processed, and a credit will automatically be applied to your credit card or original method of payment within a certain number of days. Refunds will be processed within 7 working days. The refund may take 1-2 additional days to appear in your account, depending on your payment provider. The refund will be initiated through the original payment method.</p>
+    <p>If a payment fails and the customer's account is debited, we will promptly initiate a refund. The refund will follow the same process as outlined above, and the amount will be credited back to the original payment method.</p>
+</section>
         <section>
             <h2>Late or Missing Refunds</h2>
             <p>If you haven’t received a refund yet, first check your bank account again. Then contact your credit card company; it may take some time before your refund is officially posted. Next, contact your bank. There is often some processing time before a refund is posted. If you’ve done all of this and you still have not received your refund yet, please contact us at <a href="mailto:banjossavda@gmail.com">banjossavda@gmail.com</a>.</p>
