--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -74,18 +74,17 @@ a:hover {
         <h1>Terms & Conditions</h1>
     </header>
     <main>
-        <section>
-            <h2>Services Offered</h2>
-            <p>Banjos provides a number of Internet-based services through the Platform.  The Products can be purchased through the Platform through various methods of payments offered. The sale/purchase of Products shall be additionally governed by specific policies of sale, like cancellation policy, return policy, etc.</p>
-        </section>
-        <section>
-            <h2>E-Platform for Communication</h2>
-            <p>You agree, understand, and acknowledge that Banjos Cafe (Own by Ritesh Patil) is an online platform that enables you to purchase products listed on the Platform at the price indicated therein at any time.</p>
-        </section>
-        <section>
-            <h2>Indemnity</h2>
-            <p>You shall indemnify and hold harmless Myntra, its owner, licensee, affiliates, subsidiaries, group companies (as applicable) and their respective officers, directors, agents, and employees, from any claim or demand, or actions including reasonable attorneys’ fees, made by any third party or penalty imposed due to or arising out of Your breach of this Terms of Use, privacy Policy and other Policies, or Your violation of any law, rules or regulations or the rights (including infringement of intellectual property rights) of a third party.</p>
-        </section>
-    </main>
+       <section>
+    <h2>Services Offered</h2>
+    <p>Banjos provides a number of Internet-based services through the Platform. The food items can be purchased through the Platform using various methods of payment offered. The sale/purchase of food items shall be additionally governed by specific policies of sale, like the cancellation policy, return policy, etc.</p>
+</section>
+<section>
+    <h2>E-Platform for Communication</h2>
+    <p>You agree, understand, and acknowledge that Banjo's Cafe (owned by Ritesh Patil) is an online platform that enables you to purchase food items listed on the Platform at the price indicated therein at any time.</p>
+</section>
+<section>
+    <h2>Indemnity</h2>
+    <p>You shall indemnify and hold harmless Banjos, its owner, licensee, affiliates, subsidiaries, group companies (as applicable), and their respective officers, directors, agents, and employees, from any claim or demand, or actions including reasonable attorneys’ fees, made by any third party or penalty imposed due to or arising  of Your breach of these Terms of Use, Privacy Policy, and other Policies, or Your violation of any law, rules, or regulations, or the rights (including infringement of intellectual property rights) of a third party.</p>
+</section>
+</main>
 </body>
-</html>
