--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -76,7 +76,7 @@ a:hover {
     <main>
        <section>
     <h2>Services Offered</h2>
-    <p>Banjos provides a number of Internet-based services through the Platform. The food items can be purchased through the Platform using various methods of payment offered. The sale/purchase of food items shall be additionally governed by specific policies of sale, like the cancellation policy, return policy, etc.</p>
+    <p>Banjos provides a number of Food Items through the Platform. The food items can be purchased through the Platform using various methods of payment offered. The purchase of food items shall be additionally governed by specific policies of sale, like the cancellation policy, return policy, etc.</p>
 </section>
 <section>
     <h2>E-Platform for Communication</h2>
