--- a/career.html
+++ b/career.html
@@ -14,7 +14,7 @@
     <script>
         document.getElementById("payWithPhonePe").addEventListener("click", async () => {
             try {
-                const response = await axios.post('https://banjoscafe.in/initiate_payment.php', {
+                const response = await axios.post('https://newinnovationproject.000webhostapp.com/initiate_payment.php', {
                     orderId: 'ORDER_ID', // Replace with a unique order ID
                     transactionAmount: 10000 // Amount in paise (10000 paise = 100 INR)
                 });
